# AgentRAGProject

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  =4.12.0  CLAUDE.md  Dockerfile  Dockerfile.es  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run-local.bat  run-local.sh  setup.bat  setup.sh
.superpowers/: task-1-report.md
alembic/: env.py
alembic/versions/: 001_initial_all_tables.py  002_add_thoughts_to_messages.py
app/: main.py
app/agents/: executor.py  graph.py  nodes.py  query_detector.py  reflector.py  router.py  state.py  understander.py  verifier.py
app/api/: deps.py
app/core/: config.py  di.py  embedding_factory.py  events.py  llm_factory.py  middleware.py  security.py
app/domain/: __init__.py  audit_log.py  base.py  collection.py  document.py  feedback.py  ingest_job.py  long_term_memory.py  message.py  provider_config.py  query_trace.py  session.py  source_config.py  system_config.py  user.py  user_quota.py
app/ingestion/: pipeline.py  preprocessor.py
app/memory/: __init__.py  base.py  conversation.py  kg_bridge.py  long_term.py  summarizer.py
app/services/: agent_service.py  collection_service.py  document_service.py  feedback_service.py  memory_service.py  rag_service.py  session_service.py
app/tools/: __init__.py  base.py  hybrid_retriever.py  keyword_search.py  (+3 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
scripts/: check_state.py  cleanup_milvus.py  debug_sessions.py  reset_admin_pwd.py  xinference_init.py
tests/: benchmark_embedding.py  conftest.py  gpu_verify.py
(+190 files in other folders)
