[project]
name = "agentrag"
version = "0.1.0"
description = "Self-adaptive multi-agent RAG system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.1.0",
    "pymilvus>=2.4.0",
    "redis>=5.0.0",
    "arq>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "pypdf>=4.2.0",
    "markdown-it-py>=3.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "neo4j>=5.20.0",
    "elasticsearch[async]>=8.12.0",
    "pgvector>=0.2.0",
    "jieba>=0.42.1",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]